--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.47/vue.global.min.js' integrity='sha512-DJ2+sosWB5FnZAIeCWAHu2gxQ7Gi438oOZLcBQSOrW8gD0s7LIXDv/5RW76B3FcljF40BXnfqNIo6Dhp7dFHJg==' crossorigin='anonymous'></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Vue Todolist</title>
   </head>
   <body>
     
+    <div id="app">
+      <div class="container">
+        <div class="pg-logo-container d-flex justify-content-center mt-4">
+          <img src="assets/img/logo.png" class="w-25" alt="Logo Boolean" title="Logo Boolean">
+        </div>
 
+        <div class="pg-input-container mt-5 d-flex justify-content-center">
+          <input type="text" class="w-50 form-control me-3" id="text" placeholder="Aggiungi una task">
+          <button type="button" class="btn btn-outline-primary">Aggiungi</button>
+        </div>
+
+        <div class="pg-todolist-container bg-light my-5 rounded-3">
+          <ul class="list-unstyled px-5 py-3">
+            <li class="py-3 border-bottom rounded-3 d-flex justify-content-between">
+              <span class="px-4">Test</span>
+              <i class="fa-regular fa-trash-can px-4 fs-5"></i>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
