--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <div class="pg-todolist-container bg-light my-5 rounded-3">
           <ul class="list-unstyled px-5 py-3">
-            <li class="py-3 border-bottom rounded-3 d-flex justify-content-between">
-              <span class="px-4">Test</span>
+            <li v-for="(task, index) in tasks" @click="task.done = !task.done" class="py-3 border-bottom rounded-3 d-flex justify-content-between align-items-center">
+              <span :class="{'text-decoration-line-through' : task.done}" class="px-4 fs-5">{{task.text}}</span>
               <i class="fa-regular fa-trash-can px-4 fs-5"></i>
             </li>
           </ul>
