add: task deletion function and warn message

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
           <button type="button" class="btn btn-outline-primary">Aggiungi</button>
         </div>
 
+        <div class="pg-message-container text-danger fw-bold text-center mt-3">
+          {{message}}
+        </div>
+
         <div class="pg-todolist-container bg-light my-5 rounded-3">
           <ul class="list-unstyled px-5 py-3">
             <li v-for="(task, index) in tasks" @click="task.done = !task.done" class="py-3 border-bottom rounded-3 d-flex justify-content-between align-items-center">
               <span :class="{'text-decoration-line-through' : task.done}" class="px-4 fs-5">{{task.text}}</span>
-              <i @click.stop="deleteTask(index)" class="fa-regular fa-trash-can px-4 fs-5"></i>
+              <i @click.stop="deleteTask(index, task.done)" class="fa-regular fa-trash-can px-4 fs-5"></i>
             </li>
           </ul>
         </div>
